responsive patterns + UX nav elements

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
         
-          <div class="ui page grid">
+          <div class="ui page stackable grid">
             <div class="three column row">
               <div class="column">
                 <img src="dist/themes/string/assets/header-icons-01.svg" alt="">
@@ -57,7 +57,25 @@
                 <p>It's proven to help students remember more and gain a&nbsp;deeper understanding of topics, improving their performance in exams.</p>
               </div>
             </div>
+
+            <div class="one column row">
+              <a href="#group2">
+                <div class="ui large first button">
+                  <i class="chevron down icon"></i>
+                  Watch our film
+                </div>
+              </a>
+              <a href="#group5">
+                <div class="ui large button">
+                  <i class="mail outline icon"></i>
+                  Register your interest
+                </div>
+              </a>
+            </div>
+
           </div>
+
+
         </div>
       </div>
 
@@ -79,8 +97,19 @@
       <div class="parallax__layer parallax__layer--fore">
 
         <div class="container">
+          <div class="ui page grid">
 
           <div class="ui video" data-source="vimeo" data-id="127513922" data-image="dist/themes/string/assets/video-cover.jpg"></div>
+
+            <div class="one column row">
+              <a href="#group4">
+                <div class="ui large inverted button">
+                  <i class="chevron down icon"></i>
+                  Find out more
+                </div>
+              </a>
+            </div>
+          </div>
 
         </div>
 
@@ -97,7 +126,7 @@
     
       <div class="parallax__layer parallax__layer--base">
         <div class="container">
-          <div class="ui page grid">
+          <div class="ui page stackable grid">
 
             <div class="ui one column row header">
               <h1>Best Strings every year win funded university education</h1>
@@ -133,6 +162,15 @@
                   <!-- <div class="small"><small>(no purchase required to register interest)</small></div> -->
                 </div>
               </div>
+            </div>
+
+            <div class="one column row">
+              <a href="#group5">
+                <div class="ui large button">
+                  <i class="mail outline icon"></i>
+                  Register your interest
+                </div>
+              </a>
             </div>
 
 
@@ -185,6 +223,13 @@
           <!-- End mc_embed_signup -->
 
           <p>We will email you if we make the platform available publicly and let you know how you can access it. We won't contact you for any other reason, nor will we share your email address with anyone else.</p>
+
+          <a href="#group1">
+            <div class="ui medium inverted button">
+              <i class="chevron up icon"></i>
+              Back to top
+            </div>
+          </a>
         </div>
       </div>
 
